# mandygif

./: .gitignore  Cargo.toml  README.md  SEMMAP.md  context.txt  main.js  neti-report.txt  neti.toml  package-lock.json  package.json  preload.js  test_encoder.sh  test_recorder.sh
core/captions/: Cargo.toml
core/captions/src/: lib.rs
core/encoder/: Cargo.toml
core/encoder/src/: ffmpeg.rs  gif.rs  main.rs  video.rs
core/protocol/: Cargo.toml
core/protocol/src/: lib.rs  parsing.rs  types.rs
core/protocol/tests/: golden.rs
core/recorder-linux/: Cargo.toml
core/recorder-linux/src/: lib.rs  main.rs  pipeline.rs  state.rs
core/recorder-mac/: Cargo.toml
core/recorder-mac/src/: main.rs
core/recorder-win/: Cargo.toml
core/recorder-win/src/: main.rs
core/region-selector/: Cargo.toml  build.rs
core/region-selector/src/: app.rs  main.rs
core/region-selector/ui/: selector.slint
docs/: issues.md  readme.md  roadmap.md
ui/: Cargo.toml  build.rs
ui/src/: app.rs  components.rs  hooks.rs  main.rs  processes.rs  state.rs  style.css
ui/src/components/: control_bar.rs  icons.rs  resize_handle.rs
ui/ui/: main.slint  overlay.slint
web/: app.js  capture-overlay.js  export-images.js  export-video.js  export.html  export.js  frame-encoder.worker.js  gif-preview.js  gl-context.js  index.html  media.js  overlay.html  recorder.js  renderer-export.js  screen-selector.js  styles.css  timeline.js  ui-api.js  ui.js
web/modules/: bloom-vignette-optics.js  film-grain.js
