[workspace]
members = [
    "core/protocol",
    "core/recorder-linux",
    "core/recorder-mac",
    "core/recorder-win",
    "core/encoder",
    "core/captions",
    # REMOVED: "core/region-selector",
    "ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MandyGIF Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
