[package]
name = "mandygif-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mandygif"
path = "src/main.rs"

[dependencies]
mandygif-protocol = { path = "../core/protocol" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

# Dioxus UI
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-logger = "0.6"
