[package]
name = "mandygif-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mandygif"
path = "src/main.rs"

[dependencies]
mandygif-protocol = { path = "../core/protocol" }
mandygif-recorder-linux = { path = "../core/recorder-linux" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# REMOVED: serde / serde_json (Not used directly in UI)
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-logger = "0.6"
