[package]
name = "mandygif-recorder-linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mandygif-protocol = { path = "../protocol" }
anyhow.workspace = true
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
tracing.workspace = true
