[package]
name = "mandygif-recorder-mac"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "recorder-mac"
path = "src/main.rs"

[dependencies]
mandygif-protocol = { path = "../protocol" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies will go here:
# screencapturekit (when bindings exist)
# cocoa, core-foundation, etc.