[package]
name = "mandygif-recorder-win"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "recorder-win"
path = "src/main.rs"

[dependencies]
mandygif-protocol = { path = "../protocol" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies will go here:
# windows crate for WGC/DXGI APIs