[package]
name = "mandygif-region-selector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "region-selector"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
slint = "1.4"

[build-dependencies]
slint-build = "1.4"